--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,97 +1,5 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  
-  "version": 2,
-  
-  "name": "taskmanager-frontend",
-  
-  "buildCommand": "npm run build",
-  
-  "outputDirectory": "dist/task-manager",
-  
-  "framework": null,
-  
   "installCommand": "npm install --legacy-peer-deps",
-  
-  "devCommand": "ng serve --port 4200",
-  
-  "public": false,
-  
-  "regions": ["fra1"],
-  
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "no-referrer-when-downgrade"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*).js",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*).css",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
-  
-  "env": {
-    "NODE_ENV": "production"
-  },
-  
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  },
-  
-  "github": {
-    "enabled": true,
-    "autoAlias": true,
-    "silent": false,
-    "autoJobCancelation": true
-  }
+  "buildCommand": "npm run build -- --configuration production",
+  "framework": "angular"
 }
-
