--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build -- --configuration=production",
   "outputDirectory": "dist/task-manager",
   "installCommand": "npm install --legacy-peer-deps",
   "rewrites": [
