fix: Adiciona inicializaÃ§Ã£o automÃ¡tica do banco de dados no deploy do Render - Executa init_db.py no buildCommand - Cria tabelas automaticamente no primeiro deploy

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -17,6 +17,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
+      python scripts/init_db.py
     startCommand: gunicorn --config gunicorn.conf.py main:app
     healthCheckPath: /health
     envVars:
